add draft pub page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "craftzdog-homepage",
+  "name": "Jaime's homepage",
   "version": "1.0.0",
   "description": "Jaime's website",
   "scripts": {
