--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Jaime's website",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run render-markdown-files",
     "start": "next start",
     "prettier": "prettier --write .",
     "lint": "next lint"
@@ -17,6 +17,7 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@vercel/analytics": "^1.0.1",
     "framer-motion": "^8.4.0",
     "next": "^13.1.1",
     "react": "^18.2.0",
