--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "Jaime-homepage",
+  "name": "jaime-homepage",
   "version": "1.0.0",
   "description": "Jaime's website",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run generate-blog-pages && next build",
     "start": "next start",
     "prettier": "prettier --write .",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-blog-pages": "node lib/genPosts.js"
   },
   "keywords": [],
   "author": "Jaime Hieu Do",
@@ -18,7 +19,12 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@vercel/analytics": "^1.0.1",
+    "ejs": "^3.1.9",
     "framer-motion": "^8.4.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.1",
+    "gray-matter": "^4.0.3",
+    "marked": "^6.0.0",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
